UV Editor - Crash when hiding all UVs while 3D view is open and sync selection enabled #59001

Closed
opened 2018-12-08 06:20:55 +01:00 by Kai Jægersen · 6 comments

System Information
Operating system: Windows 10 Build 1803
Graphics card: Nvidia GTX 1080

Blender Version
Broken: 2.80 Beta Windows 64 bit Build December 07, 18:55:01 - 6a5e809697

Short description of error
When workspace consists of a 3D View and UV Editor, hiding all UVs while sync selection is on causes Blender to crash.

Exact steps for others to reproduce the error

  1. Split workspace into UV Editor and 3D View
  2. With UV Editor focused, Tab into Edit Mode so that the UV shows
  3. Enable sync selection
  4. Start hiding UV fragments
  5. Observe crash when last UV fragment is hidden

Doesn't crash if sync selection is off or when no 3D view editor is open. See attached gif and example blend file.

uv_edit_hide_crash.blend
uv_edit_hide_crash.gif

**System Information** Operating system: Windows 10 Build 1803 Graphics card: Nvidia GTX 1080 **Blender Version** Broken: 2.80 Beta Windows 64 bit Build December 07, 18:55:01 - 6a5e8096973 **Short description of error** When workspace consists of a 3D View and UV Editor, hiding all UVs while sync selection is on causes Blender to crash. **Exact steps for others to reproduce the error** 1. Split workspace into UV Editor and 3D View 2. With UV Editor focused, Tab into Edit Mode so that the UV shows 3. Enable sync selection 4. Start hiding UV fragments 5. Observe crash when last UV fragment is hidden Doesn't crash if sync selection is off or when no 3D view editor is open. See attached gif and example blend file. [uv_edit_hide_crash.blend](https://archive.blender.org/developer/F5880589/uv_edit_hide_crash.blend) ![uv_edit_hide_crash.gif](https://archive.blender.org/developer/F5880599/uv_edit_hide_crash.gif)
Author

Added subscriber: @KaiJaegersen

Added subscriber: @KaiJaegersen
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed, will have a look...

Confirmed, will have a look...

This issue was referenced by 54e1d38157

This issue was referenced by 54e1d3815762ef964a74f179ef846110673e743f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Thank you for your work, Philipp.

Thank you for your work, Philipp.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59001
No description provided.