Fix T59001: UV Editor - Crash when hiding all UVs while 3D view is open and sync selection enabled

Reviewers: brecht

Maniphest Tasks: T59001

Differential Revision: https://developer.blender.org/D4066